--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,9 @@ body {
   }
 
   .intro {
-	width: 65%;
+	width: 80%;
 	margin: 10px;
-	padding: 20px;
+	padding: 2em;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -50,12 +50,20 @@ body {
   }  
 
   .map {
-	width: 65%;
+	width: 80%;
 	font-family: 'Inter';
 	background-color: rgba(255, 165, 0, 0.5); 
-	padding-bottom: 20px;
+	padding-bottom: 2em;
 	border-radius: 10px;
 	text-align: center; 
+  }
+
+  .totaltitles {
+	width: 80%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	font-family: 'Inter';
   }
 
   .figure {
