nearly done website

--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,31 @@ body {
 	padding: 0;
 }
 
+.logo-image {
+    max-width: 7%; 
+    height: auto; 
+	margin-left:20px;
+}
+.design-image {
+	max-width: 30%;
+    height: auto; 
+	margin-left:30%;
+	opacity: 0.6;	
+}
+ 
 .header-bar {
 	background-color: #5a2804;
-	/* Brown background color */
 	color: #fff;
-	/* Text color for the header */
 	padding: 10px;
+	display:flex;
+	align-items: center;
+	height: 75px;
+	width: 100%;
 }
 
 .header-bar h1 {
 	text-align: left;
-	margin-left: 100px;
+	margin-left: 10px;
 	font-family: 'DM Sans', sans-serif;
 
 }
@@ -93,7 +107,7 @@ font-size:14px;
 
 
 .footer-bar {
-	background-color: #8B4513;
+	background-color: #5a2804;
 	/* Brown background color */
 	color: #fff;
 	/* Text color for the footer */
