test css not applying on github

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,12 @@ body {
 	padding: 0;
 }
 
-.logo-image {
+img[src="logo.png"] {
     max-width: 7%; 
     height: auto; 
 	margin-left:20px;
 }
-.design-image {
+img[src="design.png"] {
 	max-width: 30%;
     height: auto; 
 	margin-left:30%;
